# lmm

./: .bumpversion.toml  .dockerignore  .gitignore  AGENT.md  CITATION.cff  CLI.md  Cargo.toml  DERIVE.md  DOCKER.md  Dockerfile  LICENSE  NODE.md  PYTHON.md  README.md  RUST.md  WASM.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: clippy.yml  docker-ci.yml  docker-publish.yml  examples-ci.yml  publish.yml  test.yml
examples/: custom_agent.rs
examples/arc-lmm-agent/: Cargo.toml  README.md
examples/arc-lmm-agent/src/: config.rs  display.rs  error.rs  frame.rs  lib.rs  main.rs  policy.rs  runner.rs  tools.rs  world.rs
examples/arc-lmm-agent/src/tools/: pathfinding.rs
examples/arc-lmm-agent/tests/: pathfinding.rs  world.rs
examples/chat/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
examples/chat/src/: app.rs  components.rs  lmm_bridge.rs  main.rs  tailwind.css  types.rs
examples/chat/src/components/: chat_window.rs  header.rs  input_bar.rs  message_bubble.rs  mode_badge.rs  sidebar.rs
lmm/: Cargo.toml
lmm-agent/: Cargo.toml  README.md
lmm-agent/examples/: causal_reasoning.rs  custom_agent.rs  multi_agent_pipeline.rs  planning_agent.rs  research_agent.rs
lmm-agent/src/: agent.rs  cognition.rs  error.rs  lib.rs  prelude.rs  runtime.rs  traits.rs  types.rs
lmm-agent/src/cognition/: goal.rs  loop.rs  memory.rs  reflect.rs  search.rs  signal.rs
lmm-agent/src/cognition/learning/: engine.rs  q_table.rs
lmm-agent/src/traits/: agent.rs  composite.rs  functions.rs
lmm-agent/tests/: agent.rs  agent_builder.rs  cognition_goal.rs  cognition_memory.rs  cognition_reflect.rs  cognition_search.rs  cognition_signal.rs  runtime.rs  think.rs  think_loop.rs  types.rs
lmm-derive/: Cargo.toml  README.md
lmm-derive/src/: lib.rs
lmm/src/: causal.rs  discovery.rs  equation.rs  field.rs  lexicon.rs  lib.rs  models.rs  net.rs  node.rs  operator.rs  perception.rs  physics.rs  predict.rs  prelude.rs  python.rs  stochastic.rs  symbolic.rs  tensor.rs  text.rs  traits.rs
papers/: .gitignore  lmm.bib  lmm.tex
python/lmm/: __init__.py  __main__.py
src/: app.rs  causal.rs  compression.rs  consciousness.rs  discovery.rs  encode.rs  equation.rs  error.rs  field.rs  imagen.rs  lexicon.rs  lib.rs  models.rs  net.rs  node.rs  operator.rs  perception.rs  physics.rs  predict.rs  prelude.rs  python.rs  simulation.rs  stochastic.rs  symbolic.rs  tensor.rs  text.rs  traits.rs  world.rs
src/cli/: commands.rs
tests/: causal.rs  compression.rs  discovery.rs  equation.rs  field.rs  integration.rs  operator.rs  physics.rs  tensor.rs
