[package]
name = "lmm"
version = "0.1.5"
edition = "2024"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
license = "MIT"
description = "A language agnostic framework for emulating reality."
documentation = "https://docs.rs/lmm"
repository = "https://github.com/wiseaidotdev/lmm"
homepage = "https://wiseai.dev"
categories = ["science"]
keywords = ["asi", "ai", "machine-learning", "llm"]
exclude = ["/assets", "/tests", ".*"]

[dependencies]
thiserror = "2.0.18"
serde_json = "1.0.149"
anyhow = "1.0.102"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
clap = { version = "4.6.0", features = ["derive"], optional = true }
tokio = { version = "1.51.1", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], optional = true }
tracing-appender = { version = "0.2", optional = true }
duckduckgo = { version = "0.2.2", optional = true }

[[bin]]
name = "lmm"
path = "src/bin/lmm.rs"
required-features = ["cli"]

[features]
default = []
cli = [
    "clap",
    "tokio",
    "tracing-subscriber",
    "tracing-appender",
]
net = [
    "duckduckgo",
    "tokio",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
