[workspace]
resolver = "2"
members = [
    "lmm",
    "lmm-derive",
    "lmm-agent",
]
exclude = [
    "target",
]

[workspace.dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.1"
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
phf = { version = "0.13.1", features = ["macros"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4"] }
derivative = "2.2.0"
clap = { version = "4.6.1", features = ["derive"] }
duckduckgo = "0.3.1"
reqwest = { version = "0.12", features = ["json"] }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
napi = { version = "3.8.5", default-features = false, features = ["napi4"] }
napi-derive = "3.5.4"
napi-build = "2.3.1"
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
lmm-derive = { version = "0.0.1", path = "./lmm-derive" }
lmm-agent = { version = "0.0.1", path = "./lmm-agent" }
lmm = { version = "0.1.15", path = "./lmm" }

[profile.dev]
split-debuginfo = "off"

[profile.test]
split-debuginfo = "off"

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
