[build-system]
requires = ["maturin>=1.13"]
build-backend = "maturin"

[project]
name = "lmm"
requires-python = ">=3.12"
description = "A language agnostic framework for emulating reality: A pure Rust, training-free, equation-based intelligence."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mahmoud Harmouch", email = "oss@wiseai.dev" }]
keywords = ["ai", "machine-learning", "symbolic-math", "physics-simulation", "causal-reasoning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://wiseai.dev"
Repository = "https://github.com/wiseaidotdev/lmm"
Documentation = "https://docs.rs/lmm"
Issues = "https://github.com/wiseaidotdev/lmm/issues"

[tool.maturin]
features = ["python"]
module-name = "lmm._lmm"
python-source = "python"

[project.scripts]
lmm = "lmm.__main__:main"
