[package]
name = "arc-lmm-agent"
version = "0.1.0"
edition = "2024"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
license = "MIT"
description = "ARC-AGI game agent powered by lmm equation-based intelligence."
repository = "https://github.com/wiseaidotdev/lmm"
homepage = "https://wiseai.dev"
keywords = ["arc-agi", "agent", "lmm", "ai", "games"]
categories = ["science", "games"]

[[bin]]
name = "arc-lmm-agent"
path = "src/main.rs"

[dependencies]
lmm-agent = { path = "../../lmm-agent" }
arc-agi-rs = { version = "0.1.0" }
tokio = { version = "1.52.1", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.6.1",  features = ["derive"] }
rand = "0.8.5"
indicatif = "0.18"
owo-colors = "4"
