[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
input-rs = { version = "0.2.6", features = ["yew"] }
lmm = { version = "0.1.11", features = ["wasm-net"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.104", default-features = false }
wasm-bindgen = { version = "0.2.87", default-features = false }
wasm-bindgen-futures = { version = "0.4.37", default-features = false }
web-sys = { version = "0.3.64", default-features = false, features = [
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Window",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "console",
] }
yew = { version = "0.22.0", default-features = false, features = ["csr"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
